# snuake-online

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  wstest.html
saas/: Cargo.toml  README.md
saas/src/: entity.rs  lib.rs  main.rs  state.rs  util.rs
snuake-client/: Cargo.toml  README.md
snuake-client/src/: canvas.rs  graphics.rs  img_placeholder.rs  main.rs  resource_loader.rs  state.rs
snuake-client/static/: index.html
snuake-server/: Cargo.toml
snuake-server/src/: core.rs  main.rs  streamext.rs  websocket.rs
snuake-shared/: Cargo.toml
snuake-shared/src/: lib.rs
stdweb-snake/: Cargo.toml  README.md
stdweb-snake/src/: main.rs  state.rs
stdweb-snake/static/: index.html
