[package]
name = "snuake-client-snake"
version = "0.1.0"
authors = ["johesoman <johesoman@gmail.com>"]
edition = "2018"

[dependencies]
stdweb = "0.4.14"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.saas]
path = "../saas"

[dependencies.snuake-shared]
path = "../snuake-shared"
